Remove school from byline on list

--- a/app/views/lists/_list.html.haml
+++ b/app/views/lists/_list.html.haml
@@ -4,7 +4,7 @@
       = list.title
     .repo-meta.clearfix
       %span.repo-username
-        By Ethan Barhydt, Harvard University
+        By Ethan Barhydt
       %span.language
         = list.items.count
         Articles
