--- a/app/views/lists/show.html.haml
+++ b/app/views/lists/show.html.haml
@@ -5,8 +5,7 @@
         .list-title
           %h3= @list.title
         %h5.byline
-          By Ethan Barhydt, 
-          %i Harvard University
+          By Ethan Barhydt
         %span
           = @list.description
 
