--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -3,6 +3,8 @@
     =link_to "Development Economics GPS", root_path, id: "home"
   %span
     =link_to "Home", root_path
+  %span
+    =link_to "Resources", resources_path
   
   %span.pull-right.pad-rt-10
     - if !(user_signed_in?)
