--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,111 +1,6 @@
-%nav.nav
-  %h1.oh-brand
-    =link_to "Development Economics GPS", root_path, id: "home"
-  %span
-    =link_to "Home", root_path
-  %span
-    =link_to "Resources", resources_path
-  
-  %span.pull-right.pad-rt-10
-    - if !(user_signed_in?)
-      =link_to "Sign in", new_user_session_path, class: "pad-rt-10"
-    -else
-      =link_to "Sign out", destroy_user_session_path, method: :delete    
-      |
-      =link_to "Library", current_user, class: "pad-rt-10"
+%nav.navbar.gps-nav.navbar-default.navbar-fixed-top
+  .container-fluid
+    .navbar-header
+      .navbar-brand Microfinance GPS
+      %ul.nav.navbar-nav
 
-  
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/ %header.navbar.navbar-fixed-top
-/   .navbar-inner
-/     .container
-/       = link_to "Research GPS", root_path, id: "logo"
-/       %nav
-/         %ul.nav.pull-right
-/           %li Login
-
-
-
-/ .container
-/   %nav.nav
-/     %h1.oh-brand
-/       = link_to "Development Economics GPS", root_url
-/     %ul.oh-menu.sitenav
-/       %li= link_to "Home", root_url
-/     %span.signin.pull-right
-/       = link_to "Sign In", new_user_session_path
-
-/ %nav
-/   .container
-/     .row
-/       .col-xs-9
-/         %ul.list-inline.heading
-/           %li
-/             %span.glyphicon.glyphicon-map-marker
-/           %li
-/             %ul
-/               %li= link_to "Development Economics GPS", root_path, id: "logo"
-/               %li.tagline Your roadmap to Development Economics
-/       .col-xs-3.navbar-btn
-/         -if !user_signed_in?
-/           = link_to "Login", new_user_session_path
-/         -else
-/           = link_to "Sign Out", destroy_user_session_path, method: :delete
-/           |
-/           = link_to "My Library", current_user
-
-        
-        
-
-
-  
-
-
-
-
-/   <header class="navbar navbar-fixed-top navbar-inverse">
-/   <div class="navbar-inner">
-/     <div class="container">
-/       <%= link_to "Ethan's Emporium", root_path, id: "logo" %>
-/       <nav>
-/         <ul class="nav pull-right">
-/           <li><%= link_to "Home", root_path %></li>
-/           <li><%= link_to "Help", help_path %></li>
-/           <% if signed_in? %>
-/             <li><%= link_to "Users", users_path %></li>
-/             <li id="fat-menu" class="dropdown">
-/               <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-/                 Account <b class="caret"></b>
-/               </a>
-/               <ul class="dropdown-menu">
-/                 <li><%= link_to "Profile", current_user %></li>
-/                 <li><%= link_to "Settings", edit_user_path(current_user) %></li>
-/                 <li class="divider"></li>
-/                 <li>
-/                   <%= link_to "Sign out", signout_path, method: "delete" %>
-/                 </li>
-/               </ul>
-/             </li>
-/           <% else %>
-/             <li><%= link_to "Sign in", signin_path %></li>
-/           <% end %>
-/         </ul>
-/       </nav>
-/     </div>
-/   </div>
-/ </header>
