--- a/app/views/static_pages/design2.html.haml
+++ b/app/views/static_pages/design2.html.haml
@@ -1,44 +1,19 @@
-%ul.list-header
-  %li
-    .row.call-to-
-      .clearfix.call-to-action.col-xs-8
-        .list-title
-          %h3 Solow Growth Model
-        %h5.byline
-          By Ethan Barhydt, 
-          %i Harvard University
-        %span
-          It was once a conventional view in economics that all national incomes would converge toward a high standard of living. The thought was that technology is the long-run determinant of growth (due to diminishing returns of capital) and that all countries have access to the newest technology. Therefore, all that is required.
-
-
-
-%ul.list
-  %li
-    =link_to root_url do
-      .row
-        .col-xs-10
-          %h4.item-name
-            A model of technology, growth, and productivity in the 20th century
-          .repo-meta.clearfix
-            %span
-              All growth in GDP is proportional to investment. Known as the Solow Growth Model. This was used to support policies in which aid fills a financing gap. But it didn't work out, and some economists didn't like it.
-        .col-xs-2
-          %span.glyphicon.glyphicon-plus.pull-right
-
-
-
-
-      / .row.item-text
-      /   .col-xs-10
-      /     %h2.repo-name
-      /       Solow Growth Model
-      /     .repo-meta.clearfix
-      /       %span.repo-username
-      /         By Ethan Barhydt (Harvard University)
-      /       %span.language
-      /         7 Articles
-      /     %h3.repo-des
-      /       All countries will converge towards a high standard of living
-      /   .col-xs-2.item-button.pull-right.pad-rt-10
-      /     %span.glyphicon.glyphicon-plus.pull-right
-
+.row
+  .col-xs-2#globe
+    GPS
+  .col-xs-10
+    .row
+      .col-xs-12.title
+        %h4 Why women are better borrowers than men
+    .row
+      .col-xs-8.description
+        the last two decades have seen an explosion of research on microfinance. This site is all about making it a piece of cake to keep track of that research. Subscribe to lists, and we'll let you know when new papers get added to that list. the last two decades have seen an explosion of research on microfinance. This site is all about making it a piece of cake to keep track of that research. Subscribe to lists, and we'll let you know when new papers get added to that list.
+    .row.item
+      .col-xs-1.date
+        1938
+      .col-xs-10
+        %h5
+          =link_to "Grameen Bank: Perfomance and sustainability.", '#'
+        .item-description
+          15.3% of male borrowers in 1991 were struggling (missing some payments before final due date) while only 1.3% of women were 
+    
