--- a/app/views/lists/index.html.haml
+++ b/app/views/lists/index.html.haml
@@ -1,3 +1,11 @@
-<h1>Lists#index</h1>
-<p>Find me in app/views/lists/index.html.erb</p>
-
+.row
+  .col-xs-2#globe
+    GPS
+  .col-xs-10.feed
+    %h1 Lists
+    - @lists.each do |list|
+      .row.feed-item
+        .col-xs-12
+          %h5
+            =link_to "#{list.title}", list_path(list)
+          
