--- a/app/views/static_pages/design.html.haml
+++ b/app/views/static_pages/design.html.haml
@@ -1,48 +1,11 @@
-%ul.list
-  %li
-    =link_to root_url do
-      %h2.repo-name
-        Convergence
-      .repo-meta.clearfix
-        %span.repo-username
-          By Ethan Barhydt (Harvard University)
-        %span.language
-          7 Articles
-      %h3.repo-des
-        All countries will converge towards a high standard of living
-  %li
-    =link_to root_url do
-      %h2.repo-name
-        Nonconvergence
-      .repo-meta.clearfix
-        %span.repo-username
-          By Ethan Barhydt (Harvard University)
-        %span.language
-          7 Articles
-      %h3.repo-des
-        All countries will converge towards a high standard of living
-
-  %li
-    =link_to root_url do
-      %h2.repo-name
-        Solow Growth Model
-      .repo-meta.clearfix
-        %span.repo-username
-          By Ethan Barhydt (Harvard University)
-        %span.language
-          7 Articles
-      %h3.repo-des
-        All countries will converge towards a high standard of living
-
-  %li
-    =link_to root_url do
-      %h2.repo-name
-        Harrod-Domar Growth Model
-      .repo-meta.clearfix
-        %span.repo-username
-          By Ethan Barhydt (Harvard University)
-        %span.language
-          7 Articles
-      %h3.repo-des
-        All countries will converge towards a high standard of living
-
+.row
+  .col-xs-2#globe
+    GPS
+  .col-xs-10.feed
+    %h1 Lists
+    .row.feed-item
+      .col-xs-12
+        %h5
+          Are women better borrowers? Empirical evidence
+        %span Curated by Ethan Barhydt
+    
