--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,6 +1,7 @@
 %nav.navbar.gps-nav.navbar-default.navbar-fixed-top
   .container-fluid
     .navbar-header
-      .navbar-brand Microfinance GPS
+      .navbar-brand 
+        =link_to "Microfinance GPS", root_path
       %ul.nav.navbar-nav
 
