--- a/app/views/layouts/_sidenav.html.haml
+++ b/app/views/layouts/_sidenav.html.haml
@@ -3,11 +3,8 @@
     .col-xs-12.col-xs-offset-1.call-to-action
       %span A roadmap to research in microfinance. Discover and track the research you care about.
   .row.info
-    .col-xs-12
-      %b 
-        %span ABOUT
-      the last two decades have seen an explosion of research on microfinance. This site is all about making it a piece of cake to keep track of that research. Subscribe to lists, and we'll let you know when new papers get added to that list.
-    .col-xs-12
-      %b 
-        %span CONTACT
-      Questions or comments? Email me at ethanbarhydt@gmail.com
+    .col-xs-4.col-xs-offset-3
+      %span ABOUT
+    .col-xs-4
+      %span CONTACT
+        
