--- a/app/views/lists/show.html.haml
+++ b/app/views/lists/show.html.haml
@@ -1,7 +1,5 @@
 .row
-  .col-xs-2#globe
-    GPS
-  .col-xs-10
+  .col-xs-10.col-xs-offset-1
     .row
       .col-xs-12.title
         %h4= @list.title
