Display title on items

--- a/app/views/items/_item.html.haml
+++ b/app/views/items/_item.html.haml
@@ -4,7 +4,7 @@
       1938
     .col-xs-10
       %h5
-        =item.url
+        =item.title
         / =link_to "#{item.title}", item.url
       .item-description
         =item.description
