--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -90,7 +90,8 @@ a {
 }
 
 .feed-item {
-	padding-bottom: 20px;
+	padding-top: 10px;
+	padding-bottom: 10px;
 	&:hover {
 		margin-left: -20px;
 		border-left: 5px solid #ffc31c;
