Add year to items model

--- a/app/views/items/_item.html.haml
+++ b/app/views/items/_item.html.haml
@@ -1,7 +1,7 @@
 =link_to item.url do 
   .row.item
     .col-xs-1.date
-      1938
+      = item.year
     .col-xs-10
       %h5
         =item.title
