--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -70,12 +70,27 @@ a {
 	margin-right: 10px;
 	margin-top: 30px;
 	span {
-		border-bottom: 2px solid #ffc31c;
 		margin-right: 50px;
+		border: 2px solid #333333;
+		padding: 5px;
+		&:hover {
+			cursor: pointer;
+		}
 	}
 	div {
 		margin-bottom: 10px;
 	}
+
+}
+
+#info-active {
+	color: white;
+	background: #333333;
+}
+
+.view-info {
+	font-size: .7em;
+	padding: 5px;
 }
 
 .contact {
@@ -147,7 +162,8 @@ a {
 
 .footer {
 	border-top: 1px solid #d3d3d3;
-	margin-top: 5px;
+	margin-top: 10px;
+	padding-top: 10px;
 	padding-bottom: 10px;
 	font-size: .9em;
 }
