--- a/app/views/layouts/_sidenav.html.haml
+++ b/app/views/layouts/_sidenav.html.haml
@@ -1,10 +1,15 @@
 .sidenav
   .row
     .col-xs-12.col-xs-offset-1.call-to-action
-      %span A roadmap to research in microfinance. Discover and track the research you care about.
+      %span A roadmap to research in microfinance. Find the best papers in our curated lists.
   .row.info
     .col-xs-4.col-xs-offset-3
-      %span ABOUT
+      %span.about
+        ABOUT
     .col-xs-4
-      %span CONTACT
+      %span.contact
+        CONTACT
+  .row
+    .col-xs-12.col-xs-offset-2.view-info
+
         
