--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,6 +1,8 @@
 !!! 5
 %html{lang: "en"}
   %head
+    %title
+      = full_title(yield(:title))
     = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true
     = javascript_include_tag 'application', 'data-turbolinks-track' => true
     = csrf_meta_tags
@@ -20,5 +22,5 @@
           = yield
     .footer 
       .container-fluid
-        .contact.pull-right
+        .pull-right
           Questions or comments? Email ethanbarhydt@gmail.com
