Make mobile compatible and add google analytics

--- a/app/views/lists/index.html.haml
+++ b/app/views/lists/index.html.haml
@@ -1,6 +1,6 @@
 - provide(:title, "Home")
 .row
-  .col-xs-2#globe
+  .col-md-2#globe.hidden-sm.hidden-xs
     GPS
   .col-xs-10.feed
     %h1 Lists
