--- a/app/views/layouts/_sidenav.html.haml
+++ b/app/views/layouts/_sidenav.html.haml
@@ -1,15 +1,15 @@
 .sidenav
   .row
-    .col-xs-12.col-xs-offset-1.call-to-action
+    .col-sm-12.col-sm-offset-1.call-to-action
       %span A roadmap to research in microfinance. Find the best papers in our curated lists.
   .row.info
-    .col-xs-4.col-xs-offset-3
+    .col-sm-4.col-sm-offset-3
       %span.about
         ABOUT
-    .col-xs-4
+    .col-sm-4
       %span.contact
         CONTACT
   .row
-    .col-xs-12.col-xs-offset-2.view-info
+    .col-sm-12.col-sm-offset-2.view-info
 
         
