--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,6 +7,7 @@
     = javascript_include_tag 'application', 'data-turbolinks-track' => true
     = csrf_meta_tags
     %meta{ name: "viewport", content: "width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"}
+    = render 'shared/analytics'
     = render 'layouts/shim'
   
   %body
@@ -16,11 +17,11 @@
     = render 'layouts/header'
     .container-fluid
       .row
-        .col-xs-3
+        .col-sm-3.hidden-xs
           = render 'layouts/sidenav'
-        .col-xs-9.main
+        .col-sm-9.main.col-xs-12
           = yield
     .footer 
       .container-fluid
         .pull-right
-          Questions or comments? Email ethanbarhydt@gmail.com
+          Research GPS 2015
