Adjust messaging in sidenav

--- a/app/views/layouts/_sidenav.html.haml
+++ b/app/views/layouts/_sidenav.html.haml
@@ -1,7 +1,7 @@
 .sidenav
   .row
     .col-sm-12.col-sm-offset-1.call-to-action
-      %span A roadmap to research in microfinance. Find the best papers in our curated lists.
+      %span A roadmap to research in microfinance. Great papers, curated by humans.
   .row.info
     .col-sm-4.col-sm-offset-3
       %span.about
