--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -30,6 +30,57 @@ a {
 	}
 }
 
+#wrapper {
+    padding-left: 0;
+
+}
+
+.sidebar-nav li {
+    list-style: none;
+    padding-left: 20px;
+    padding-right: 10px;
+}
+
+li.slogan {
+	font-size: 1.3em;
+}
+
+.sidebar-nav li a {
+    display: block;
+    text-decoration: none;
+    color: #999999;
+}
+
+#sidebar-wrapper {
+    z-index: 1000;
+    position: fixed;
+    height: 100%;
+    width: 0px;
+    left: 250px;
+    margin-left: -250px;
+    // border-right: 1px solid black;
+    overflow-y: auto;    
+    // -webkit-transition: all 0.5s ease;
+    // -moz-transition: all 0.5s ease;
+    // -o-transition: all 0.5s ease;
+    // transition: all 0.5s ease;
+}
+
+.sidebar-nav {
+    position: absolute;
+    top: 0;
+    width: 250px;
+    margin: 0;
+    padding: 0;
+}
+
+#page-content-wrapper {
+    width: 100%;
+    position: absolute;
+    // padding: 15px;
+    padding-top: 0px;
+}
+
 .journal {
 	font-style: italic;
 }
@@ -38,15 +89,10 @@ a {
 	border-radius: 100%;
 	background-color: #333333;
 	color: #ffc31c;
-	height: 70px;
-	width: 70px;
-	padding-top: 27px;
-	margin-bottom: 20px;
-	padding-left: 20px;
+	padding: 10px;
+	padding-left: 10px;
 	letter-spacing: 2px;
-	font-size: .9em;
-	margin-left: 50px;
-	margin-right: 2px;
+	font-size: .7em;
 }
 
 // NAV
@@ -105,21 +151,28 @@ a {
 // FEED 
 
 .feed {
-	border-left: 5px solid #333333;
+	margin-left: 15px;
+	margin-right: 15px;
 }
 
 .feed-item {
-	padding-top: 10px;
-	padding-bottom: 10px;
+	border: 1px solid black;
+	width: 150px;
+	height: 200px;
+	margin-bottom: 15px;
+	margin-right: 15px;
+	padding-top: 25px;
+	padding-bottom: 50px;
+	padding-left: 20px;
+	padding-right: 20px;
 	&:hover {
-		margin-left: -20px;
-		border-left: 5px solid #ffc31c;
-		button {
+		background: #333333;
+		.paper-count {
 			color: #ffc31c;
 		}
-	}
-	span {
-		color: #777777;
+		h5 {
+			color: white;
+		}
 	}
 }
 
@@ -127,6 +180,11 @@ a {
 
 .paper-count {
 	color: #777777;
+
+}
+
+.list {
+	margin-left: 15px;
 }
 
 .title  {
@@ -172,7 +230,31 @@ a {
 	font-size: .9em;
 }
 
+@media(min-width:768px) {
+    #wrapper {
+        padding-left: 250px;
+    }
 
+    #wrapper.toggled {
+        padding-left: 0;
+    }
 
+    #sidebar-wrapper {
+        width: 250px;
+    }
 
+    #wrapper.toggled #sidebar-wrapper {
+        width: 0;
+    }
+
+    #page-content-wrapper {
+        // padding: 20px;
+        position: relative;
+    }
+
+    #wrapper.toggled #page-content-wrapper {
+        position: relative;
+        margin-right: 0;
+    }
+}
 
