--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,7 +1,9 @@
 %nav.navbar.gps-nav.navbar-default.navbar-fixed-top
   .container-fluid
     .navbar-header
-      .navbar-brand 
-        =link_to "Microfinance GPS", root_path
+      .navbar-brand
+        =link_to root_path do 
+          Research
+          %span#globe GPS
       %ul.nav.navbar-nav
 
