--- a/app/views/layouts/_sidenav.html.haml
+++ b/app/views/layouts/_sidenav.html.haml
@@ -1,15 +1,20 @@
-.sidenav
-  .row
-    .col-sm-12.col-sm-offset-1.call-to-action
-      %span A roadmap to research in microfinance. Great papers, curated by humans.
-  .row.info
-    .col-sm-4.col-sm-offset-3
-      %span.about
-        ABOUT
-    .col-sm-4
-      %span.contact
-        CONTACT
-  .row
-    .col-sm-12.col-sm-offset-2.view-info
+#sidebar-wrapper
+  %ul.sidebar-nav  
+    %li.slogan
+      A roadmap to the best research in microfinance. Great papers curated by the community.  
+  /       #sidebar-wrapper
+  / %ul.sidebar-nav.nav
+  /   =render partial: 'shared/shelf_item', collection: current_user.articles #collection refers to variable name in controller
 
-        
+  / .row
+  /   .col-sm-12.col-sm-offset-1.call-to-action
+  /     %span A roadmap to research in microfinance. Great papers, curated by humans.
+  / .row.info
+  /   .col-sm-4.col-sm-offset-3
+  /     %span.about
+  /       ABOUT
+  /   .col-sm-4
+  /     %span.contact
+  /       CONTACT
+  / .row
+  /   .col-sm-12.col-sm-offset-2.view-info
