--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -15,13 +15,13 @@
     /   = content_tag(:div, value, class: "alert alert-#{key}")
     
     = render 'layouts/header'
-    .container-fluid
-      .row
-        .col-sm-3.hidden-xs
-          = render 'layouts/sidenav'
-        .col-sm-9.main.col-xs-12
+    #wrapper
+      = render 'layouts/sidenav'
+      #page-content-wrapper
+        .container-fixed
           = yield
-    .footer 
-      .container-fluid
-        .pull-right
-          Research GPS 2015
+
+  .footer 
+    .container-fluid
+      .pull-right
+        Research GPS 2015
