--- a/app/views/lists/show.html.haml
+++ b/app/views/lists/show.html.haml
@@ -1,6 +1,6 @@
 - provide(:title, @list.title)
 .row
-  .col-xs-10.col-xs-offset-1
+  .col-xs-10.list
     .row
       .col-xs-12.title
         %h4= @list.title
