--- a/app/views/lists/show.html.haml
+++ b/app/views/lists/show.html.haml
@@ -3,7 +3,7 @@
   .col-xs-10.list
     .row
       .col-xs-12.title
-        %h4= @list.title
+        %h4= "Microfinance > #{@list.title}"
     .row
       .col-xs-8.description
         = @list.description 
