--- a/app/views/lists/index.html.haml
+++ b/app/views/lists/index.html.haml
@@ -3,7 +3,7 @@
   / .col-md-2#globe.hidden-sm.hidden-xs
   /   GPS
   .col-xs-10.feed
-    %h1 Microfinance
+    %h1 Lists in Microfinance
     .row
     - @lists.each do |list|
       =link_to list_path(list) do
