Change sidenav content again

--- a/app/views/layouts/_sidenav.html.haml
+++ b/app/views/layouts/_sidenav.html.haml
@@ -1,7 +1,7 @@
 #sidebar-wrapper
   %ul.sidebar-nav  
     %li.slogan
-      A roadmap to great papers in development econ, curated by the research community.
+      A roadmap to great papers in development economics.
     %br
     %li.signup
       = form_for EmailSignup.new do |f|
@@ -21,7 +21,7 @@
     /     More to come!
     %br
     .email-me
-      Questions or comments? Better yet, want to curate a list or two?! Email Ethan at ethanbarhydt@gmail.com
+      Questions or comments? Better yet, want to curate a list or two? Email Ethan at ethanbarhydt@gmail.com
 
 
 
