Modify sidenav content yet again

--- a/app/views/layouts/_sidenav.html.haml
+++ b/app/views/layouts/_sidenav.html.haml
@@ -1,7 +1,7 @@
 #sidebar-wrapper
   %ul.sidebar-nav  
     %li.slogan
-      A roadmap to great papers in development economics.
+      A roadmap to great research papers in microfinance
     %br
     %li.signup
       = form_for EmailSignup.new do |f|
