Request contributions from viewers on list#show

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -59,6 +59,10 @@ a {
     padding-right: 10px;
 }
 
+#missing-content {
+	background: #fcf8e3;
+}
+
 li.slogan {
 	font-size: 1.2em;
 	margin-bottom: 50px;
