Improve messaging and UI

--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -5,5 +5,8 @@
         =link_to root_path do 
           Research
           %span#globe GPS
-      %ul.nav.navbar-nav
+    %ul
+      %li.slogan
+        The Internet's syllabus for Development Economics
+
 
