--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -48,6 +48,11 @@ a {
 	margin: 10px;
 }
 
+.signup input {
+	width: 100%;
+	height: 40px;
+}
+
 #wrapper {
     padding-left: 0;
 
@@ -64,8 +69,11 @@ a {
 }
 
 li.slogan {
-	font-size: 1.2em;
-	margin-bottom: 50px;
+	// font-size: 1.2em;
+	margin-top: 15px;
+	list-style: none;
+	text-align: center;
+	margin-right: 90px;
 }
 
 .sidebar-nav li a {
@@ -198,6 +206,9 @@ li.slogan {
 .feed {
 	margin-left: 15px;
 	margin-right: 15px;
+	h1 {
+		margin-bottom: 20px;
+	}
 }
 
 .feed-item {
@@ -294,7 +305,7 @@ li.slogan {
     }
 
     #page-content-wrapper {
-        padding-left: 20px;
+        padding-left: 30px;
         position: relative;
     }
 
