Change email address on lists

--- a/app/views/lists/show.html.haml
+++ b/app/views/lists/show.html.haml
@@ -14,8 +14,8 @@
             Looks like there aren't any articles here yet :-( 
           / %br
           %i
-            Contribute to this list by emailing me at ethanbarhydt@gmail.com. You'll be listed as a curator of the list (if you want)
+            Contribute to this list by emailing ResearchGPS@gmail.com. 
         -else
-          Something missing from this list? Help make it better. Email me at ethanbarhydt@gmail.com.
+          Something missing from this list? Help make it better. Email ResearchGPS@gmail.com.
     = render @items
 
