Fix email address to info@researchgps.com

--- a/app/views/layouts/_sidenav.html.haml
+++ b/app/views/layouts/_sidenav.html.haml
@@ -13,7 +13,7 @@
       Find the best research papers in development economics, curated by a community of academics.
     %br
     %li
-      ResearchGPS@gmail.com
+      info@researchgps.com
 
 
 
