--- a/app/views/lists/show.html.haml
+++ b/app/views/lists/show.html.haml
@@ -14,8 +14,8 @@
             Looks like there aren't any articles here yet :-( 
           / %br
           %i
-            Contribute to this list by emailing ResearchGPS@gmail.com. 
+            Contribute to this list by emailing info@researchgps.com. 
         -else
-          Something missing from this list? Help make it better. Email ResearchGPS@gmail.com.
+          Something missing from this list? Help make it better. Email info@researchgps.com.
     = render @items
 
