Add static page for each topic

--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -3,9 +3,9 @@
   %h4 select a topic
   %br
   %h2
-    =link_to "Microfinance", lists_path
+    =link_to "Microfinance", 'static_pages/microfinance'
   %h2 
-    =link_to "Health", '#'
+    =link_to "Health", 'static_pages/health'
   %br
   %br
   %h4 more topics coming soon...
