--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -8,5 +8,5 @@
     =link_to "Health", 'static_pages/health'
   %br
   %br
-  %h4 more topics coming soon...
+  %h4 *More developing topics coming soon, including History -- Macroeconomics -- Trade -- Foreign Aid -- Education -- Household Economics -- Firms -- Taxation -- Corruption -- Technology -- Behavioral Poverty -- More
 
