Add growth page

--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -6,7 +6,9 @@
     =link_to "Microfinance", 'static_pages/microfinance'
   %h2 
     =link_to "Health", 'static_pages/health'
+  %h2 
+    =link_to "Growth", 'static_pages/growth'
   %br
   %br
-  %h4 *More development topics coming soon, including History -- Growth -- Trade -- Foreign Aid -- Education -- Household Economics -- Firms and Contracts -- Taxation -- Corruption -- Technology -- Behavioral Poverty -- More
+  %h4 *More development topics coming soon, including History -- Trade -- Foreign Aid -- Education -- Household Economics -- Firms and Contracts -- Taxation -- Corruption -- Technology -- Behavioral Poverty -- More
 
