--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -228,22 +228,37 @@ li.slogan {
 
 .feed-item {
 	border: 1px solid black;
-	width: 150px;
-	height: 200px;
-	margin-bottom: 15px;
-	margin-right: 15px;
-	padding-top: 25px;
-	padding-bottom: 50px;
-	padding-left: 20px;
-	padding-right: 20px;
-	&:hover {
-		background: #333333;
-		.paper-count {
-			color: #ffc31c;
-		}
-		h5 {
-			color: white;
-		}
+	width: 220px;
+	height: 267px;
+	margin-bottom: 25px;
+	border-radius: 1%;
+	margin-right: 25px;
+	// line-height: 30px;
+	text-align: center;
+	padding-left: 7px;
+	padding-right: 7px;
+	display: flex;
+	justify-content: center;
+	flex-direction: column;
+	height: 300px;
+	background: #333333;
+	.paper-count {
+		color: #ffc31c;
+	}
+	h5 {
+		color: white;
+	}
+
+	h5 {
+		font-size: 1.2em;
+		line-height: 22px;
+	}
+	h6 {
+		font-size: 1.1em;
+		font-weight: normal;
+		color: white;
+		line-height: 17px;
+		margin-top: 5px;
 	}
 }
 
