--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -8,6 +8,8 @@
     =link_to "Health", 'static_pages/health'
   %h2 
     =link_to "Growth", 'static_pages/growth'
+  %h2 
+    =link_to "Education", 'static_pages/education'
   %br
   %br
   %h4 *More development topics coming soon, including History -- Trade -- Foreign Aid -- Education -- Household Economics -- Firms and Contracts -- Taxation -- Corruption -- Technology -- Behavioral Poverty -- More
