--- a/app/views/static_pages/growth.html.haml
+++ b/app/views/static_pages/growth.html.haml
@@ -10,6 +10,8 @@
         .col-xs-4.feed-item
           %h5
             =list.title
+          %h6
+            =list.description
           .paper-count
             =list.items.count
             papers
