Add history topic

--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -10,7 +10,9 @@
     =link_to "Growth", 'static_pages/growth'
   %h2 
     =link_to "Education", 'static_pages/education'
+  %h2 
+    =link_to "History", 'static_pages/history'
   %br
   %br
-  %h4 *More development topics coming soon, including History -- Trade -- Foreign Aid -- Education -- Household Economics -- Firms and Contracts -- Taxation -- Corruption -- Technology -- Behavioral Poverty -- More
+  %h4 *More development topics coming soon, including Trade -- Foreign Aid -- Household Economics -- Firms and Contracts -- Taxation -- Corruption -- Technology -- Behavioral Poverty -- More
 
