--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -12,7 +12,9 @@
     =link_to "Education", 'static_pages/education'
   %h2 
     =link_to "History", 'static_pages/history'
+  %h2 
+    =link_to "Foreign Aid", 'static_pages/foreignaid'
   %br
-  %br
+
   %h4 *More development topics coming soon, including Trade -- Foreign Aid -- Household Economics -- Firms and Contracts -- Taxation -- Corruption -- Technology -- Behavioral Poverty -- More
 
