Add property rights topic

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -245,6 +245,9 @@ li.slogan {
 	.paper-count {
 		color: #ffc31c;
 	}
+	.curator {
+		color: #ffc31c;
+	}
 	h5 {
 		color: white;
 	}
@@ -268,6 +271,8 @@ li.slogan {
 	color: #777777;
 
 }
+
+
 
 .list {
 	margin-left: 15px;
