--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -14,6 +14,8 @@
     =link_to "History", 'static_pages/history'
   %h2 
     =link_to "Foreign Aid", 'static_pages/foreignaid'
+  %h2 
+    =link_to "Property Rights", 'static_pages/propertyrights'
   %br
 
   %h4 *More development topics coming soon, including Trade -- Foreign Aid -- Household Economics -- Firms and Contracts -- Taxation -- Corruption -- Technology -- Behavioral Poverty -- More
