--- a/app/views/static_pages/propertyrights.html.haml
+++ b/app/views/static_pages/propertyrights.html.haml
@@ -3,7 +3,7 @@
   / .col-md-2#globe.hidden-sm.hidden-xs
   /   GPS
   .col-xs-12.feed
-    %h1 Lists in Microfinance
+    %h1 Lists in Property Rights
     .row
     - @lists.each do |list|
       =link_to list_path(list) do
