--- a/app/views/lists/show.html.haml
+++ b/app/views/lists/show.html.haml
@@ -4,6 +4,7 @@
     .row
       .col-xs-12.title
         %h4= "Microfinance > #{@list.title}"
+        %H5 BY ETHAN BARHYDT (PHD, Harvard University)
     .row
       .col-xs-12.description
         = @list.description
