Change sidenav messaging, improve list styles

--- a/app/views/layouts/_sidenav.html.haml
+++ b/app/views/layouts/_sidenav.html.haml
@@ -10,7 +10,7 @@
         = f.submit "Get Weekly Updates", class: "btn-gps"
     %br
     %li.italic
-      Find the best research papers in development economics, curated by a community of academics.
+      Playlists to kickstart your research in development economics. We give you the important papers on dozens of topics. Curated by PhD students.
     %br
     %li
       info@researchgps.com
