--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -15,6 +15,7 @@
     /   = content_tag(:div, value, class: "alert alert-#{key}")
     
     = render 'layouts/header'
+    / # = debug(params) if Rails.env.development?
     #wrapper
       = render 'layouts/sidenav'
       #page-content-wrapper
