--- a/app/views/lists/index.html.haml
+++ b/app/views/lists/index.html.haml
@@ -1,15 +1,15 @@
 - provide(:title, "Home")
+%h1.collections Collections
+= form_tag lists_path, method: :get, class: "tag-form", remote: true do
+  CHOOSE SOME TAGS (new feature!)
+  %br
+  - @tags.each do |tag|
+    = check_box_tag("tags[]", tag.id, @checked_tags[tag.id], class: "tag_checkbox")
+    %span.checkboxtext= tag.name
+  / # = submit_tag "Filter", class: "submit"
 .row
   / .col-md-2#globe.hidden-sm.hidden-xs
   /   GPS
   .col-xs-12.feed
-    %h1 Lists in Microfinance
-    .row
-    - @lists.each do |list|
-      =link_to list_path(list) do
-        .col-xs-4.feed-item
-          %h5
-            =list.title
-          .paper-count
-            =list.items.count
-            papers
+    .row.feed-lists
+      = render @lists
