--- a/app/views/lists/index.html.haml
+++ b/app/views/lists/index.html.haml
@@ -1,12 +1,12 @@
 - provide(:title, "Home")
 %h1.collections Collections
 = form_tag lists_path, method: :get, class: "tag-form" do
-  CHOOSE SOME TAGS (feature is broken, fix coming soon)
+  Choose some tags to find what you're looking for
   %br
   - @tags.each do |tag|
     = check_box_tag("tags[]", tag.id, @checked_tags[tag.id], class: "tag_checkbox")
     %span.checkboxtext= tag.name
-  = submit_tag "Filter", class: "submit"
+  / # = submit_tag "Filter", class: "submit"
 .row
   / .col-md-2#globe.hidden-sm.hidden-xs
   /   GPS
